이펙티브 자바 item35, 자바 버전별 GC 변화, 메모리 단편화